@@ -997,9 +997,9 @@ public class Stmt {
   private Var setIndex(int start, int end, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      return new Var(ctx.L_ID().getText(), new Long(start));
+      return new Var(ctx.L_ID().getText(), Long.valueOf(start));
     else
-      return new Var(ctx.L_ID().getText(), new Long(end));
+      return new Var(ctx.L_ID().getText(), Long.valueOf(end));
   }
 
   /**
@@ -1008,9 +1008,9 @@ public class Stmt {
   private void updateIndex(int step, Var index, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      index.increment(new Long(step));
+      index.increment(step);
     else
-      index.decrement(new Long(step));
+      index.decrement(step);
   }
 
   /**
